--- a/style.css
+++ b/style.css
@@ -4,10 +4,18 @@
     text-align: center;
 }
 header {
+    padding-top: 5%;
     background-color: #111;
     color: aliceblue;
+    position: fixed;
+    height: 10%;
+    width: 100%;
+    overflow: hidden;
 }
 footer{
     background-color: #111;
     color: aliceblue;
+}
+main {
+    padding-top: 15%;
 }
