--- a/style.css
+++ b/style.css
@@ -11,13 +11,19 @@ header {
     height: 10%;
     width: 100%;
     overflow: hidden;
+    margin-bottom: 5px;
 }
 footer{
     background-color: #111;
     color: aliceblue;
+    margin-top: 20px;
 }
 main {
     padding-top: 15%;
+}
+main section h2 {
+    margin-top: 5px;
+    margin-bottom: 10px;
 }
 table, tr, td {
     margin: auto;
