--- a/style.css
+++ b/style.css
@@ -17,6 +17,9 @@ footer{
     background-color: #111;
     color: aliceblue;
     margin-top: 20px;
+    position: fixed;
+    width: 100%;
+    bottom: 0;
 }
 main {
     padding-top: 15%;
