--- a/style.css
+++ b/style.css
@@ -3,6 +3,15 @@
     padding: 0;
     text-align: center;
 }
+html, body {
+    height: fit-content;
+    background-color: rgb(168, 147, 119);
+}
+body {
+    min-height: 100%;
+    display: flex;
+    flex-direction: column;
+}
 header {
     padding-top: 5%;
     background-color: #111;
@@ -17,18 +26,19 @@ footer{
     background-color: #111;
     color: aliceblue;
     margin-top: 20px;
-    position: fixed;
     width: 100%;
     bottom: 0;
+    overflow: hidden;
 }
 main {
     padding-top: 15%;
+    flex: 1
 }
 main section h2 {
     margin-top: 5px;
     margin-bottom: 10px;
 }
-table, tr, td {
+table, tr, td, th {
     margin: auto;
     border: 1px solid;
     border-collapse: collapse;
@@ -36,4 +46,32 @@ table, tr, td {
 }
 td {
     width: 200px;
+    text-align: left;
+    padding-left: 5px;
+}
+.right {
+    text-align: center;
+    text-decoration: underline;
+}
+aside {
+    width: 30%;
+    padding-left: 15px;
+    margin-left: 15px;
+    float: right;
+    background-color: rgb(62, 54, 54); 
+    position: fixed;
+}
+div {
+    width: 50%;
+    margin-left: 40%;
+}
+p {
+    text-align: left;
+    padding-bottom: 5px;
+}
+a {
+    color: aliceblue;
+}
+aside h3 {
+    padding-bottom: 10px;
 }
